qt_3d_logic/c_lib/include/qt_3d_logic_c_QFrameAction.h

#ifndef QT_3D_LOGIC_C_QFRAMEACTION_H
#define QT_3D_LOGIC_C_QFRAMEACTION_H

#include "qt_3d_logic_c_global.h"

extern "C" {

QT_3D_LOGIC_C_EXPORT QObject* qt_3d_logic_c_QFrameAction_G_static_cast_QObject_ptr(Qt3DLogic::QFrameAction* ptr);
QT_3D_LOGIC_C_EXPORT Qt3DCore::QComponent* qt_3d_logic_c_QFrameAction_G_static_cast_Qt3DCore_QComponent_ptr(Qt3DLogic::QFrameAction* ptr);
QT_3D_LOGIC_C_EXPORT Qt3DCore::QNode* qt_3d_logic_c_QFrameAction_G_static_cast_Qt3DCore_QNode_ptr(Qt3DLogic::QFrameAction* ptr);
QT_3D_LOGIC_C_EXPORT Qt3DLogic::QFrameAction* qt_3d_logic_c_QFrameAction_G_static_cast_Qt3DLogic_QFrameAction_ptr_QObject(QObject* ptr);
QT_3D_LOGIC_C_EXPORT Qt3DLogic::QFrameAction* qt_3d_logic_c_QFrameAction_G_static_cast_Qt3DLogic_QFrameAction_ptr_Qt3DCore_QComponent(Qt3DCore::QComponent* ptr);
QT_3D_LOGIC_C_EXPORT Qt3DLogic::QFrameAction* qt_3d_logic_c_QFrameAction_G_static_cast_Qt3DLogic_QFrameAction_ptr_Qt3DCore_QNode(Qt3DCore::QNode* ptr);
QT_3D_LOGIC_C_EXPORT void qt_3d_logic_c_Qt3DLogic_QFrameAction_delete(Qt3DLogic::QFrameAction* this_ptr);
QT_3D_LOGIC_C_EXPORT const QMetaObject* qt_3d_logic_c_Qt3DLogic_QFrameAction_metaObject(const Qt3DLogic::QFrameAction* this_ptr);
QT_3D_LOGIC_C_EXPORT Qt3DLogic::QFrameAction* qt_3d_logic_c_Qt3DLogic_QFrameAction_new_no_args();
QT_3D_LOGIC_C_EXPORT Qt3DLogic::QFrameAction* qt_3d_logic_c_Qt3DLogic_QFrameAction_new_parent(Qt3DCore::QNode* parent);
QT_3D_LOGIC_C_EXPORT int qt_3d_logic_c_Qt3DLogic_QFrameAction_qt_metacall(Qt3DLogic::QFrameAction* this_ptr, const QMetaObject::Call* arg1, int arg2, void** arg3);
QT_3D_LOGIC_C_EXPORT void* qt_3d_logic_c_Qt3DLogic_QFrameAction_qt_metacast(Qt3DLogic::QFrameAction* this_ptr, const char* arg1);
QT_3D_LOGIC_C_EXPORT void qt_3d_logic_c_Qt3DLogic_QFrameAction_trUtf8_to_output(const char* s, const char* c, int n, QString* output);
QT_3D_LOGIC_C_EXPORT void qt_3d_logic_c_Qt3DLogic_QFrameAction_tr_to_output(const char* s, const char* c, int n, QString* output);

} // extern "C"

#endif // QT_3D_LOGIC_C_QFRAMEACTION_H