qt_3d_logic/c_lib/include/qt_3d_logic_c_QLogicAspect.h

#ifndef QT_3D_LOGIC_C_QLOGICASPECT_H
#define QT_3D_LOGIC_C_QLOGICASPECT_H

#include "qt_3d_logic_c_global.h"

extern "C" {

QT_3D_LOGIC_C_EXPORT QObject* qt_3d_logic_c_QLogicAspect_G_static_cast_QObject_ptr(Qt3DLogic::QLogicAspect* ptr);
QT_3D_LOGIC_C_EXPORT Qt3DCore::QAbstractAspect* qt_3d_logic_c_QLogicAspect_G_static_cast_Qt3DCore_QAbstractAspect_ptr(Qt3DLogic::QLogicAspect* ptr);
QT_3D_LOGIC_C_EXPORT Qt3DLogic::QLogicAspect* qt_3d_logic_c_QLogicAspect_G_static_cast_Qt3DLogic_QLogicAspect_ptr_QObject(QObject* ptr);
QT_3D_LOGIC_C_EXPORT Qt3DLogic::QLogicAspect* qt_3d_logic_c_QLogicAspect_G_static_cast_Qt3DLogic_QLogicAspect_ptr_Qt3DCore_QAbstractAspect(Qt3DCore::QAbstractAspect* ptr);
QT_3D_LOGIC_C_EXPORT void qt_3d_logic_c_Qt3DLogic_QLogicAspect_delete(Qt3DLogic::QLogicAspect* this_ptr);
QT_3D_LOGIC_C_EXPORT const QMetaObject* qt_3d_logic_c_Qt3DLogic_QLogicAspect_metaObject(const Qt3DLogic::QLogicAspect* this_ptr);
QT_3D_LOGIC_C_EXPORT Qt3DLogic::QLogicAspect* qt_3d_logic_c_Qt3DLogic_QLogicAspect_new_no_args();
QT_3D_LOGIC_C_EXPORT Qt3DLogic::QLogicAspect* qt_3d_logic_c_Qt3DLogic_QLogicAspect_new_parent(QObject* parent);
QT_3D_LOGIC_C_EXPORT int qt_3d_logic_c_Qt3DLogic_QLogicAspect_qt_metacall(Qt3DLogic::QLogicAspect* this_ptr, const QMetaObject::Call* arg1, int arg2, void** arg3);
QT_3D_LOGIC_C_EXPORT void* qt_3d_logic_c_Qt3DLogic_QLogicAspect_qt_metacast(Qt3DLogic::QLogicAspect* this_ptr, const char* arg1);
QT_3D_LOGIC_C_EXPORT void qt_3d_logic_c_Qt3DLogic_QLogicAspect_trUtf8_to_output(const char* s, const char* c, int n, QString* output);
QT_3D_LOGIC_C_EXPORT void qt_3d_logic_c_Qt3DLogic_QLogicAspect_tr_to_output(const char* s, const char* c, int n, QString* output);

} // extern "C"

#endif // QT_3D_LOGIC_C_QLOGICASPECT_H