qt_3d_logic/src/ffi.in.rs

extern "C" {
  // Header: QFrameAction
  pub fn qt_3d_logic_c_QFrameAction_G_static_cast_QObject_ptr(ptr: *mut ::frame_action::FrameAction) -> *mut ::qt_core::object::Object;
  pub fn qt_3d_logic_c_QFrameAction_G_static_cast_Qt3DCore_QComponent_ptr(ptr: *mut ::frame_action::FrameAction) -> *mut ::qt_3d_core::component::Component;
  pub fn qt_3d_logic_c_QFrameAction_G_static_cast_Qt3DCore_QNode_ptr(ptr: *mut ::frame_action::FrameAction) -> *mut ::qt_3d_core::node::Node;
  pub fn qt_3d_logic_c_QFrameAction_G_static_cast_Qt3DLogic_QFrameAction_ptr_QObject(ptr: *mut ::qt_core::object::Object) -> *mut ::frame_action::FrameAction;
  pub fn qt_3d_logic_c_QFrameAction_G_static_cast_Qt3DLogic_QFrameAction_ptr_Qt3DCore_QComponent(ptr: *mut ::qt_3d_core::component::Component) -> *mut ::frame_action::FrameAction;
  pub fn qt_3d_logic_c_QFrameAction_G_static_cast_Qt3DLogic_QFrameAction_ptr_Qt3DCore_QNode(ptr: *mut ::qt_3d_core::node::Node) -> *mut ::frame_action::FrameAction;
  pub fn qt_3d_logic_c_Qt3DLogic_QFrameAction_delete(this_ptr: *mut ::frame_action::FrameAction);
  pub fn qt_3d_logic_c_Qt3DLogic_QFrameAction_metaObject(this_ptr: *const ::frame_action::FrameAction) -> *const ::qt_core::meta_object::MetaObject;
  pub fn qt_3d_logic_c_Qt3DLogic_QFrameAction_new_no_args() -> *mut ::frame_action::FrameAction;
  pub fn qt_3d_logic_c_Qt3DLogic_QFrameAction_new_parent(parent: *mut ::qt_3d_core::node::Node) -> *mut ::frame_action::FrameAction;
  pub fn qt_3d_logic_c_Qt3DLogic_QFrameAction_qt_metacall(this_ptr: *mut ::frame_action::FrameAction, arg1: *const ::qt_core::meta_object::Call, arg2: ::libc::c_int, arg3: *mut *mut ::libc::c_void) -> ::libc::c_int;
  pub fn qt_3d_logic_c_Qt3DLogic_QFrameAction_qt_metacast(this_ptr: *mut ::frame_action::FrameAction, arg1: *const ::libc::c_char) -> *mut ::libc::c_void;
  pub fn qt_3d_logic_c_Qt3DLogic_QFrameAction_trUtf8_to_output(s: *const ::libc::c_char, c: *const ::libc::c_char, n: ::libc::c_int, output: *mut ::qt_core::string::String);
  pub fn qt_3d_logic_c_Qt3DLogic_QFrameAction_tr_to_output(s: *const ::libc::c_char, c: *const ::libc::c_char, n: ::libc::c_int, output: *mut ::qt_core::string::String);

  // Header: QLogicAspect
  pub fn qt_3d_logic_c_QLogicAspect_G_static_cast_QObject_ptr(ptr: *mut ::logic_aspect::LogicAspect) -> *mut ::qt_core::object::Object;
  pub fn qt_3d_logic_c_QLogicAspect_G_static_cast_Qt3DCore_QAbstractAspect_ptr(ptr: *mut ::logic_aspect::LogicAspect) -> *mut ::qt_3d_core::abstract_aspect::AbstractAspect;
  pub fn qt_3d_logic_c_QLogicAspect_G_static_cast_Qt3DLogic_QLogicAspect_ptr_QObject(ptr: *mut ::qt_core::object::Object) -> *mut ::logic_aspect::LogicAspect;
  pub fn qt_3d_logic_c_QLogicAspect_G_static_cast_Qt3DLogic_QLogicAspect_ptr_Qt3DCore_QAbstractAspect(ptr: *mut ::qt_3d_core::abstract_aspect::AbstractAspect) -> *mut ::logic_aspect::LogicAspect;
  pub fn qt_3d_logic_c_Qt3DLogic_QLogicAspect_delete(this_ptr: *mut ::logic_aspect::LogicAspect);
  pub fn qt_3d_logic_c_Qt3DLogic_QLogicAspect_metaObject(this_ptr: *const ::logic_aspect::LogicAspect) -> *const ::qt_core::meta_object::MetaObject;
  pub fn qt_3d_logic_c_Qt3DLogic_QLogicAspect_new_no_args() -> *mut ::logic_aspect::LogicAspect;
  pub fn qt_3d_logic_c_Qt3DLogic_QLogicAspect_new_parent(parent: *mut ::qt_core::object::Object) -> *mut ::logic_aspect::LogicAspect;
  pub fn qt_3d_logic_c_Qt3DLogic_QLogicAspect_qt_metacall(this_ptr: *mut ::logic_aspect::LogicAspect, arg1: *const ::qt_core::meta_object::Call, arg2: ::libc::c_int, arg3: *mut *mut ::libc::c_void) -> ::libc::c_int;
  pub fn qt_3d_logic_c_Qt3DLogic_QLogicAspect_qt_metacast(this_ptr: *mut ::logic_aspect::LogicAspect, arg1: *const ::libc::c_char) -> *mut ::libc::c_void;
  pub fn qt_3d_logic_c_Qt3DLogic_QLogicAspect_trUtf8_to_output(s: *const ::libc::c_char, c: *const ::libc::c_char, n: ::libc::c_int, output: *mut ::qt_core::string::String);
  pub fn qt_3d_logic_c_Qt3DLogic_QLogicAspect_tr_to_output(s: *const ::libc::c_char, c: *const ::libc::c_char, n: ::libc::c_int, output: *mut ::qt_core::string::String);

}
